--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,26 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Test-Deep
-version:      0.106
-version_from: ./lib/Test/Deep.pm
-installdirs:  perl
+--- #YAML:1.0
+name:               Test-Deep
+version:            0.107
+abstract:           ~
+author:
+    - Fergal Daly <fergal@esatclear.ie>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    List::Util:                    1.09
-    Scalar::Util:                  1.09
-    Test::More:                    0
-    Test::NoWarnings:              0.02
-    Test::Tester:                  0.04
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+    List::Util:        1.09
+    Scalar::Util:      1.09
+    Test::More:        0
+    Test::NoWarnings:  0.02
+    Test::Tester:      0.04
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
