--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,26 @@
---- #YAML:1.0
-name:               Test-Deep
-version:            0.108
-abstract:           ~
+---
+abstract: unknown
 author:
-    - Fergal Daly <fergal@esatclear.ie>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Fergal Daly <fergal@esatclear.ie>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    List::Util:        1.09
-    Scalar::Util:      1.09
-    Test::More:        0
-    Test::NoWarnings:  0.02
-    Test::Tester:      0.04
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120351'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Test-Deep
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  List::Util: 1.09
+  Scalar::Util: 1.09
+  Test::More: 0
+  Test::NoWarnings: 0.02
+  Test::Tester: 0.04
+version: 0.109
