--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.82, CPAN::Meta::Converter version 2.132830'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,4 +23,10 @@ requires:
   Test::More: 0
   Test::NoWarnings: 0.02
   Test::Tester: 0.04
-version: 0.110
+resources:
+  MailingList: http://lists.perl.org/list/perl-qa.html
+  bugtracker: http://github.com/rjbs/Test-Deep/issues/
+  homepage: http://github.com/rjbs/Test-Deep/
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/rjbs/Test-Deep/
+version: 0.111
