--- a/META.yml
+++ b/META.yml
@@ -4,10 +4,13 @@ author:
   - 'Fergal Daly <fergal@esatclear.ie>'
 build_requires:
   ExtUtils::MakeMaker: '0'
+  Test::More: '0'
+  Test::NoWarnings: '0.02'
+  Test::Tester: '0.04'
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.142060'
+generated_by: 'ExtUtils::MakeMaker version 7.04, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,13 +23,9 @@ no_index:
 requires:
   List::Util: '1.09'
   Scalar::Util: '1.09'
-  Test::More: '0'
-  Test::NoWarnings: '0.02'
-  Test::Tester: '0.04'
+  Test::Builder: '0'
 resources:
   MailingList: http://lists.perl.org/list/perl-qa.html
-  bugtracker: http://github.com/rjbs/Test-Deep/issues/
   homepage: http://github.com/rjbs/Test-Deep/
   license: http://dev.perl.org/licenses/
-  repository: http://github.com/rjbs/Test-Deep/
-version: '0.113'
+version: '0.114'
